k8s-objects/jellyfin/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jellyfin
  labels:
    name: jellyfin
